--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mantine/hooks": "^7.6.2",
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.1.0",
+    "clsx": "^2.1.0",
+    "mantine-datatable": "^7.6.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
