--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
     "@mantine/core": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
     "@mantinex/mantine-logo": "^1.0.1",
