--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.1.0",
+    "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
     "mantine-datatable": "^7.6.1",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
