--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@mantine/hooks": "^7.6.2",
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.1.0",
-    "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
+    "convex": "^1.10.0",
     "mantine-datatable": "^7.6.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "svix": "^1.21.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
