--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
+    "@mantine/notifications": "^7.7.1",
     "@mantinex/mantine-logo": "^1.0.1",
     "@tabler/icons-react": "^3.1.0",
     "clsx": "^2.1.0",
